src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

@font-face {
    font-family: "TerminusTTF";
    src: local("TerminusTTF"),
        url("./fonts/TerminusTTF.ttf") format("truetype");
    font-weight: 1000
}

@font-face {
    font-family: "sijiTTF";
    src: local("sijiTTF"),
        url("./fonts/siji.ttf") format("truetype");
    font-weight: 1000
}
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;
  min-width: 900px;
  max-width: 2304px;
  max-height: 1536px;
}

body, html {
    height: 100%;
    margin: 0;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

a {
    text-decoration: none!important
}

a:hover {
    text-decoration: underline!important
}

@media only screen and (max-width: 900px) {
    body{
        overflow: scroll;
    }
}

